-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 0.9
-
Fix Version/s: 0.10.0
-
Component/s: C++ - Library
-
Labels:None
-
Environment:
Mac OSX
-
Patch Info:Patch Available
Suppose you have a successful client / server connection on Mac. The client suddenly disconnects while the server is writing the reply to the socket. Currently, this causes SIG PIPE.
Thrift already has code to deal with this on Linux, but Mac / BSD do this differently.