THRIFT-2019: Writing on a disconnected socket on Mac causes SIG PIPE Client: cpp Patch: Ben Craig